update slider images

--- a/red_mind/core/templates/core/base.html
+++ b/red_mind/core/templates/core/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'core/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-    <title>{% block title %}Red Mind Heart{% endblock title %}</title>
+    <title>{% block title %}Project Red Mind{% endblock title %}</title>
 </head>
 <body>
     
