--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -10,13 +10,37 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'core/images/1.jpg' %}" alt="First slide">
+            <img class="d-block w-100" src="{% static 'core/images/0.png' %}" alt="slide1">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/2.jpg' %}" alt="Second slide">
+            <img class="d-block w-100" src="{% static 'core/images/1.jpg' %}" alt="slide2">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/3.jpg' %}" alt="Third slide">
+            <img class="d-block w-100" src="{% static 'core/images/2.jpg' %}" alt="slide3">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/3.jpg' %}" alt="slide4">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/4.jpg' %}" alt="slide5">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/5.jpg' %}" alt="slide6">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/6.jpg' %}" alt="slide7">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/7.jpg' %}" alt="slide8">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/8.jpg' %}" alt="slide9">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/9.jpg' %}" alt="slide10">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'core/images/10.jpg' %}" alt="slide11">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
