--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% block title %}RMH - Home{% endblock title %}
 {% block content %}
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div class="container-fluid pt-4 mt-3">
+<div id="carouselExampleIndicators" class="carousel slide row" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -51,5 +52,6 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+</div>
 </div>
 {% endblock content %}
