--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-primary navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-        <a class="navbar-brand text-white" href="#">Project Red Mind</a>
+        <a class="navbar-brand text-white" href="#" style='font-size: 2.2vw;'>Project Red Mind</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
