--- a/red_mind/core/templates/core/footer.html
+++ b/red_mind/core/templates/core/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small indigo">
+<footer class="page-footer font-small ">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mb-4 mt-3">
@@ -21,40 +21,37 @@
         </div>
         <div class="row text-center d-flex justify-content-center pt-5 mb-3">
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">About us</a>
-                </h6>
+                <h3 class="text-uppercase font-weight-bold ">
+                    <a href="about.html">About us</a>
+                </h3>
             </div>
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Products</a>
-                </h6>
+                <h3 class="text-uppercase font-weight-bold">
+                    <a href="contact.html">Contact Us</a>
+                </h3>
             </div>
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Awards</a>
-                </h6>
+                <h3 class="text-uppercase font-weight-bold">
+                    <a href="joinus.html">Join Us</a>
+                </h3>
             </div>
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
+                <h3 class="text-uppercase font-weight-bold">
                     <a href="#!">Help</a>
-                </h6>
+                </h3>
             </div>
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
+                <h3 class="text-uppercase font-weight-bold">
                     <a href="#!">Contact</a>
-                </h6>
+                </h3>
             </div>
         </div>
         <hr class="rgba-white-light" style="margin: 0 15%;">
-        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+        <div class="	row d-flex text-center justify-content-center mb-md-0 mb-4">
             <div class="col-md-8 col-12 mt-5">
-                <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                    accusantium doloremque laudantium, totam rem
-                    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                    explicabo.
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                    consequuntur.</p>
+                <p style="line-height: 1.7rem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+                    quae consectetur nulla officiis sapiente! Reiciendis, harum, quo velit, explicabo laudantium
+                    obcaecati saepe sunt odit atque ea eos optio blanditiis. Aperiam..</p>
             </div>
         </div>
         <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
