--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -2,56 +2,203 @@
 {% load static %}
 {% block title %}RMH - Home{% endblock title %}
 {% block content %}
-<div class="container-fluid pt-4 mt-3">
-<div id="carouselExampleIndicators" class="carousel slide row" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'core/images/0.png' %}" alt="slide1">
+<main class="main-content">
+    <div class="container">
+        <h1>Recent Viewed</h2>
+        
+        <div class="page">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="slider">
+                        <ul class="slides">
+                            <li><a href="#"><img src="{% static 'core/images/1.jpg' %}" alt="Slide 1"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/2.jpg' %}" alt="Slide 2"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/3.jpg' %}" alt="Slide 3"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/4.jpg' %}" alt="Slide 3"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/5.jpg' %}" alt="Slide 3"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/6.jpg' %}" alt="Slide 3"></a></li>
+                            <li><a href="#"><img src="{% static 'core/images/7.jpg' %}" alt="Slide 3"></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-12 mb-3">
+                            <div class="latest-movie">
+                                <a href="#"><img src="{% static 'core/images/8.jpg' %}" alt="Movie 1"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-12">
+                            <div class="latest-movie">
+                                <a href="#"><img src="{% static 'core/images/10.jpg' %}" alt="Movie 2"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-12 mb-2">
+                            <div class="latest-movie">
+                                <a href="#"><img src="{% static 'core/images/9.jpg' %}" alt="Movie 2"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- .row -->
         </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/1.jpg' %}" alt="slide2">
+        <h1> Most Popular</h1>
+        <div class="slider-box">
+            <amp-carousel class="carousel" height="200" layout="fixed-height" type="carousel">
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/11.jpg' %}" height="200" width="300" alt="Mobirise">
+
+                </a>
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+
+                </amp-img>
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/12.jpg' %}" height="200" width="300" alt="Mobirise">
+
+                </a>
+
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+
+                </amp-img>
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/13.jpg' %}" height="200" width="300" alt="Mobirise">
+                </a>
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+
+                </amp-img>
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/14.jpg' %}" height="200" width="300" alt="Mobirise">
+
+                </a>
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+
+                </amp-img>
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/15.jpg' %}" height="200" width="300" alt="Mobirise">
+
+                </a>
+
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+
+                </amp-img>
+                <a href="">
+                    <amp-img class="carousel-img" src="{% static 'core/images/16.jpg' %}" height="200" width="300" alt="Mobirise">
+
+                </a>
+                <div placeholder="">
+                    <div class="mobirise-spinner">
+                        <em></em>
+                        <em></em>
+                        <em></em>
+                    </div>
+                </div>
+                </amp-img>
+            </amp-carousel>
+            </section>
+
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <h2 class="section-title">December premiere</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore.</p>
+                    <ul class="movie-schedule">
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                    </ul> <!-- .movie-schedule -->
+                </div>
+                <div class="col-md-4">
+                    <h2 class="section-title">November premiere</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore.</p>
+                    <ul class="movie-schedule">
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                    </ul> <!-- .movie-schedule -->
+                </div>
+                <div class="col-md-4">
+                    <h2 class="section-title">October premiere</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore.</p>
+                    <ul class="movie-schedule">
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                        <li>
+                            <div class="date">16/12</div>
+                            <h2 class="entry-title"><a href="#">Perspiciatis unde omnis</a></h2>
+                        </li>
+                    </ul> <!-- .movie-schedule -->
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/2.jpg' %}" alt="slide3">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/3.jpg' %}" alt="slide4">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/4.jpg' %}" alt="slide5">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/5.jpg' %}" alt="slide6">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/6.jpg' %}" alt="slide7">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/7.jpg' %}" alt="slide8">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/8.jpg' %}" alt="slide9">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/9.jpg' %}" alt="slide10">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'core/images/10.jpg' %}" alt="slide11">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-</div>
+    </div> <!-- .container -->
+</main>
+
 {% endblock content %}
