--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -1,56 +1,30 @@
-<nav class="navbar bg-primary navbar-expand-lg navbar-light fixed-top">
+{% load static %}
+<header class="site-header">
     <div class="container">
-        <a class="navbar-brand text-white" href="#" style='font-size: 2.2vw;'>Project Red Mind</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a href="index.html" id="branding">
+            <img src="{% static 'core/images/logo.png' %}" alt="logo" class="logo">
+            <div class="logo-copy">
+                <h1 class="site-title">PRM</h1>
+                <small class="site-description">Honest Review Of Movies</small>
+            </div>
+        </a> <!-- #branding -->
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active mx-2">
-                    <a class="nav-link text-white" href="#">Home</span></a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">About</a>
-                </li>
+        <div class="main-navigation mt-3">
+            <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
+            <ul class="menu">
+                <li class="menu-item current-menu-item"><a href="#">Home</a></li>
+                <li class="menu-item"><a href="#">About</a></li>
+                <li class="menu-item"><a href="#">Movie reviews</a></li>
+                <li class="menu-item"><a href="#">Join us</a></li>
+                <li class="menu-item"><a href="#">Contact</a></li>
+            </ul> <!-- .menu -->
 
-                <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle text-white" href="http://example.com"
-                        id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> Services </a>
-                    <ul class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Movie Suggestion</a></li>
-                        <li><a class="dropdown-item" href="#">Memoji</a></li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle"
-                                href="http://google.com">Translator</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Submenu</a></li>
-                                <li><a class="dropdown-item" href="#">Submenu0</a></li>
-                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle"
-                                        href="#">Submenu 1</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Subsubmenu1</a></li>
-                                        <li><a class="dropdown-item" href="#">Subsubmenu1</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle"
-                                        href="#">Submenu 2</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Subsubmenu2</a></li>
-                                        <li><a class="dropdown-item" href="#">Subsubmenu2</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+            <form action="#" class="search-form">
+                <input type="text" placeholder="Search...">
+                <button><i class="fa fa-search"></i></button>
             </form>
-        </div>
+        </div> <!-- .main-navigation -->
+
+        <div class="mobile-navigation"></div>
     </div>
-</nav>
+</header>
