--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -9,12 +9,12 @@
             </div>
         </a> <!-- #branding -->
 
-        <div class="main-navigation mt-3">
+        <div class="main-navigation mt-2">
             <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
             <ul class="menu">
                 <li class="menu-item current-menu-item"><a href="#">Home</a></li>
                 <li class="menu-item"><a href="#">About</a></li>
-                <li class="menu-item"><a href="#">Movie reviews</a></li>
+                <li class="menu-item"><a href="#">Movie Recommendation</a></li>
                 <li class="menu-item"><a href="#">Join us</a></li>
                 <li class="menu-item"><a href="#">Contact</a></li>
             </ul> <!-- .menu -->
