--- a/red_mind/core/static/core/css/style.css
+++ b/red_mind/core/static/core/css/style.css
@@ -1586,177 +1586,197 @@ ul.arrow {
     background-position: 100% center; }
 
 .movie-list {
-  margin: 0 -15px; }
+margin: 0 -15px; }
+.movie-list .movie {
+width: 25%;
+padding: 0 15px;
+float: left;
+margin-bottom: 30px; }
+@media screen and (min-width: 991px) {
+  .movie-list .movie:nth-child(4n+1) {
+    clear: both; } }
+@media screen and (max-width: 990px) {
   .movie-list .movie {
-    width: 25%;
-    padding: 0 15px;
-    float: left;
-    margin-bottom: 30px; }
-    @media screen and (min-width: 991px) {
-      .movie-list .movie:nth-child(4n+1) {
-        clear: both; } }
-    @media screen and (max-width: 990px) {
-      .movie-list .movie {
-        width: 50%; }
-        .movie-list .movie:nth-child(4n+1) {
-          clear: none; }
-        .movie-list .movie:nth-child(2n+1) {
-          clear: both; } }
-    @media screen and (max-width: 480px) {
-      .movie-list .movie {
-        width: 100%;
-        clear: both; } }
-     .movie .movie-poster {
-      border-radius: 5px;
-      overflow: hidden;
-      margin-bottom: 20px;
-      border: 1px solid transparent; }
-     .movie .movie-poster img {
-        display: block;
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        -webkit-transition: .3s ease;
-                transition: .3s ease; }
-    .movie:hover img {
-      -webkit-transform: scale(1.2);
-          -ms-transform: scale(1.2);
-              transform: scale(1.2); }
-     .movie .movie-title {
-      text-align: center;
-      font-size: 24px;
-      font-size: 1.6em;
-      font-weight: 300;
-      margin-bottom: 20px; }
-    .movie .movie-title a {
-        font-weight: bold;
-        color: #84878d;
-        -webkit-transition: .3s ease;
-                transition: .3s ease; }
-        .movie .movie-title a:hover {
-          color: #ffaa3c; }
+    width: 50%; }
+    .movie-list .movie:nth-child(4n+1) {
+      clear: none; }
+    .movie-list .movie:nth-child(2n+1) {
+      clear: both; } }
+@media screen and (max-width: 480px) {
+  .movie-list .movie {
+    width: 100%;
+    clear: both; } }
+  .movie .movie-poster {
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  border: 1px solid transparent; }
+  .movie .movie-poster img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    -webkit-transition: .3s ease;
+            transition: .3s ease; }
+            .movie .movie-posters {
+              border-radius: 5px;
+              overflow: hidden;
+              margin-bottom: 20px;
+              border: 1px solid transparent; }
+            .movie .movie-posters img {
+              display: block;
+              width: 480px;
+              max-width: 100%;
+              height: 330px;
+              -webkit-transition: .3s ease;
+                      transition: .3s ease; }
+.movie:hover img {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2); }
+  .movie .movie-title {
+  text-align: center;
+  font-size: 24px;
+  font-size: 1.6em;
+  font-weight: 300;
+  margin-bottom: 20px; }
+  .movie .movie-title h1 {
+    font-weight: bold;
+    color: #141313;
+    -webkit-transition: .3s ease;
+            transition: .3s ease; }
+    .movie .movie-title a:hover {
+      color: #ffaa3c;
+  }
+.movie .movie-title a {
+    font-weight: bold;
+    color: #ffffff;
+    -webkit-transition: .3s ease;
+            transition: .3s ease; }
+    .movie .movie-title a:hover {
+      color: #ffaa3c; }
 
 .pagination {
-  clear: both;
-  text-align: center; }
-  .pagination .page-number {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    border-radius: 5px;
-    background: #e7e7e7;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    line-height: 2.6;
-    color: #84878d;
-    font-size: 15px;
-    font-size: 1em;
-    -webkit-transition: .3s ease;
-            transition: .3s ease; }
-    .pagination .page-number.current, .pagination .page-number:hover {
-      background: #ffaa3c;
-      color: white; }
+clear: both;
+text-align: center; }
+.pagination .page-number {
+display: inline-block;
+width: 40px;
+height: 40px;
+border-radius: 5px;
+background: #e7e7e7;
+box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+line-height: 2.6;
+color: #84878d;
+font-size: 15px;
+font-size: 1em;
+-webkit-transition: .3s ease;
+        transition: .3s ease; }
+.pagination .page-number.current, .pagination .page-number:hover {
+  background: #ffaa3c;
+  color: white; }
 
 .movie-meta, .starring {
-  margin-bottom: 30px;
-  list-style: none; }
-  .movie-meta li, .starring li {
-    margin-bottom: 10px; }
+margin-bottom: 30px;
+list-style: none; }
+.movie-meta li, .starring li {
+margin-bottom: 10px; }
 
 /*
- * Footer Styles
- */
+* Footer Styles
+*/
 .site-footer {
-  padding: 50px 0; }
-  .site-footer .widget {
-    margin-bottom: 30px; }
-  .site-footer .widget-title {
-    color: #bec1c8;
-    font-weight: 300; }
-  .site-footer .subscribe-form input[type="text"] {
+padding: 50px 0; }
+.site-footer .widget {
+margin-bottom: 30px; }
+.site-footer .widget-title {
+color: #bec1c8;
+font-weight: 300; }
+.site-footer .subscribe-form input[type="text"] {
+width: 100%;
+border: 1px solid #bec1c8;
+background-color: transparent;
+background-image: url(images/arrow.png);
+background-repeat: no-repeat;
+background-position: right center;
+color: inherit;
+font-size: 13px;
+font-size: 0.8666666667em;
+-webkit-transition: .3s ease;
+        transition: .3s ease; }
+.site-footer .subscribe-form input[type="text"]:focus, .site-footer .subscribe-form input[type="text"]:hover {
+  border-color: #ffaa3c; }
+.site-footer a {
+color: #84878d;
+-webkit-transition: .3s ease;
+        transition: .3s ease; }
+.site-footer a:hover {
+  color: #ffaa3c; }
+.site-footer .colophon {
+padding-top: 30px; }
+element.style {
+}
+.ipc-page-section.featured-today {
+    margin-bottom: 0.5rem;
+}
+.ipc-page-section:first-of-type {
+    margin-top: 0;
+}
+.ipc-page-section:last-of-type {
+    margin-bottom: 0;
+}
+.ipc-page-section--baseAlt {
+    background: #121212;
+    background: rgb(18,18,18);
+    background: var(--ipt-baseAlt-shade3-bg);
+    color: #fff;
+    color: rgb(255,255,255);
+    color: var(--ipt-on-baseAlt-color);
+}
+.ipc-page-section {
+    padding: 1rem 0;
+    margin: 0 0 .5rem;
+}
+.ipc-page-grid__item--span-2 {
+    grid-column: span 1;
+    width: auto;
+}
+.ipc-page-grid__item--span-2 {
     width: 100%;
-    border: 1px solid #bec1c8;
-    background-color: transparent;
-    background-image: url(images/arrow.png);
-    background-repeat: no-repeat;
-    background-position: right center;
-    color: inherit;
-    font-size: 13px;
-    font-size: 0.8666666667em;
-    -webkit-transition: .3s ease;
-            transition: .3s ease; }
-    .site-footer .subscribe-form input[type="text"]:focus, .site-footer .subscribe-form input[type="text"]:hover {
-      border-color: #ffaa3c; }
-  .site-footer a {
-    color: #84878d;
-    -webkit-transition: .3s ease;
-            transition: .3s ease; }
-    .site-footer a:hover {
-      color: #ffaa3c; }
-  .site-footer .colophon {
-    padding-top: 30px; }
-    element.style {
-    }
-    .ipc-page-section.featured-today {
-        margin-bottom: 0.5rem;
-    }
-    .ipc-page-section:first-of-type {
-        margin-top: 0;
-    }
-    .ipc-page-section:last-of-type {
-        margin-bottom: 0;
-    }
-    .ipc-page-section--baseAlt {
-        background: #121212;
-        background: rgb(18,18,18);
-        background: var(--ipt-baseAlt-shade3-bg);
-        color: #fff;
-        color: rgb(255,255,255);
-        color: var(--ipt-on-baseAlt-color);
-    }
-    .ipc-page-section {
-        padding: 1rem 0;
-        margin: 0 0 .5rem;
-    }
-    .ipc-page-grid__item--span-2 {
-        grid-column: span 1;
-        width: auto;
-    }
-    .ipc-page-grid__item--span-2 {
-        width: 100%;
-    }
-    article, aside, footer, header, nav, section {
-        display: block;
-    }
-    *, *:before, *:after {
-        box-sizing: border-box;
-    }
-    user agent stylesheet
-    section {
-        display: block;
-    }
-    .ipc-page-wrapper--baseAlt {
-        background: #000;
-        background: rgb(0,0,0);
-        background: var(--ipt-baseAlt-bg);
-        color: #fff;
-        color: rgb(255,255,255);
-        color: var(--ipt-on-baseAlt-color);
-    }
-    .ipc-page-wrapper {
-        font-family: "Roboto","Helvetica","Arial",sans-serif;
-        font-family: Roboto,Helvetica,Arial,sans-serif;
-        font-family: var(--ipt-font-family);
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        font-size: 1rem;
-        line-height: 1.5rem;
-        font-weight: 400;
-        letter-spacing: .03125em;
-        text-decoration: inherit;
-        text-transform: inherit;
-        -webkit-font-smoothing: auto;
-        font-smooth: auto;
-        min-height: 67vh;
-        min-width: 300px;
-        position: relative;
-    }
+}
+article, aside, footer, header, nav, section {
+    display: block;
+}
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+user agent stylesheet
+section {
+    display: block;
+}
+.ipc-page-wrapper--baseAlt {
+    background: #000;
+    background: rgb(0,0,0);
+    background: var(--ipt-baseAlt-bg);
+    color: #fff;
+    color: rgb(255,255,255);
+    color: var(--ipt-on-baseAlt-color);
+}
+.ipc-page-wrapper {
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+    font-family: var(--ipt-font-family);
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    letter-spacing: .03125em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    -webkit-font-smoothing: auto;
+    font-smooth: auto;
+    min-height: 67vh;
+    min-width: 300px;
+    position: relative;
+}
