fix review link

--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -66,8 +66,9 @@
                         <div class="row">
                             <div class="col-sm-6 col-md-12">
                                 <div class="movie">
+                                    <a href="{% url 'review' %}">
                                     <figure class="movie-poster"><img src="{% static 'core/images/8.jpg' %}" alt="Slide 1">
-                                    </figure>
+                                    </figure></a>
                                     <h3 style="text-align: center;" class="mb-1">Don-2</h3>
                                 </div>
                             </div>
