--- a/red_mind/core/templates/core/index.html
+++ b/red_mind/core/templates/core/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Red Mind</title>
 </head>
 <body>
     <form action="" method="POST">
@@ -27,11 +27,26 @@
         <h1>Similar Movies: {{similar_movies}}</h1>
         <img width="200px" src={{poster}}>
         <hr>
-        {% for movie,poster in movie_posters %}
-            {{movie}}
-            <img width="200px" src={{poster}}>
-            <hr>
-        {% endfor %}
+        <h1>Casts</h1>
+        {% if casts %}
+            {% for cast in casts %}
+            Origanal Name:{{cast.original_name}}
+            Character:{{cast.character}}
+            <img width="100" src="{{cast.image}}">
+            <a href="{% url 'cast' cast.cast_id %}">Details</a>
+            {% endfor %}
+        {% endif %}
+        <hr>
+        <h1>Similar Movies</h1>
+        {% if movie_posters %}
+            {% for movie,poster in movie_posters %}
+                {{movie}}
+                <img width="200px" src={{poster}}>
+                <hr>
+            {% endfor %}
+        {% else %}
+            <h2>Some thing went worng</h2>
+        {% endif %}
     {% elif sorry %}
         <h1>{{sorry}}</h1>
     {% endif %}
