add option to show similar movies details

--- a/red_mind/core/templates/core/cast.html
+++ b/red_mind/core/templates/core/cast.html
@@ -21,8 +21,8 @@
         {% if deathday %}
             <h1>Deathday: {{deathday}}</h1>
         {% endif %}
-        {% if department %}
-            <h1>Department: {{department}}</h1>
+        {% if profession %}
+            <h1>Profession: {{profession}}</h1>
         {% endif %}
         <img width="200" src="{{profile_path}}" alt="">
     {% elif sorry %}
