--- a/red_mind/core/templates/core/index.html
+++ b/red_mind/core/templates/core/index.html
@@ -7,7 +7,7 @@
     <title>Project Red Mind</title>
 </head>
 <body>
-    <form action="" method="POST">
+    <form action="{% url 'home' %}" method="POST">
         {% csrf_token %}
         <input type="text" name="title" placeholder="Enter movie name">
         <input type="submit" value="submit">
@@ -42,6 +42,11 @@
             {% for movie,poster in movie_posters %}
                 {{movie}}
                 <img width="200px" src={{poster}}>
+                <form action="{% url 'home' %}" method="POST">
+                    {% csrf_token %}
+                    <input hidden type="text" name="title" value={{movie}}>
+                    <input type="submit" value="view">
+                </form>
                 <hr>
             {% endfor %}
         {% else %}
