--- a/red_mind/core/templates/core/base.html
+++ b/red_mind/core/templates/core/base.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="shortcut icon" href="{% static 'core/images/logo.png' %}" type="image/x-icon"> -->
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    <title>CoWIN : {% block title %}{% endblock title %}</title>
+    <title>PRM : {% block title %}{% endblock title %}</title>
 </head>
 <body>
     
@@ -17,6 +16,7 @@
 
     <div class="container-fluid">
         {% block content %}
+        <h1>Home</h1>
         {% endblock content %}
     </div>
 
