design home page search bar,details,cast details

--- a/red_mind/core/templates/core/base.html
+++ b/red_mind/core/templates/core/base.html
@@ -14,9 +14,8 @@
     
     {% include 'core/navbar.html' %}
 
-    <div class="container-fluid">
+    <div class="container-fluid bg">
         {% block content %}
-        <h1>Home</h1>
         {% endblock content %}
     </div>
 
