--- a/red_mind/core/static/core/css/style.css
+++ b/red_mind/core/static/core/css/style.css
@@ -1,36 +1,24 @@
-.home {
-  background-image: url("../images/home.jpg");
-  background-color: dimgrey;
-  background-size: cover;
-  height: 100%;
-  text-shadow: 2px 2px black;
+.text-responsive {
+  font-size: calc(100% + 1vw + 1vh);
+  font-family: "Rubik", sans-serif;
 }
-.about {
-  background-image: url("../images/about.jpg");
-  background-color: dimgrey;
-  background-size: cover;
-  height: 100%;
-  text-shadow: 2px 2px black;
+
+.trans{
+  background-color: rgba(225, 0, 0, 0.3);
+  /* background-color: rgb(225, 0, 0); */
 }
-.feed {
-  background-image: url("../images/feedback.jpg");
-  background-color: dimgrey;
-  background-size: cover;
+
+.bg {
+  /* The image used */
+  background-image: url("../images/background.jpg");
+
+  /* Full height */
   height: 100%;
-  text-shadow: 2px 2px black;
-}
-.search {
-  background-image: url("../images/search.jpg");
-  background-color: dimgrey;
-  background-size: cover;
-  height: 100%;
-  text-shadow: 1px 1px gray;
-}
-.login {
-  background: url("../images/login.jpg") no-repeat center center fixed;
-  background-color: #EACDCF;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+
+  background-color: red;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
