design review table

--- a/red_mind/core/static/core/css/style.css
+++ b/red_mind/core/static/core/css/style.css
@@ -22,3 +22,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+table tr td, table tr th{
+  background-color: rgba(210,130,240, 0.3) !important;
+}
