--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -54,9 +54,9 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
         {% for cast in casts %}
         <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 text-light text-center border">
                 <img src="{{cast.image}}" class="card-img-top" alt="cast-img">
-                <div class="card-body trans">
+                <div class="card-body trans border">
                     <h5 class="card-title">{{cast.original_name}}</h5>
                     <p class="card-text">({{cast.character}})</p>
                 </div>
@@ -72,11 +72,9 @@
     {% endif %}
     {% if reviews %}
     <div class="row text-center">
-        <div class="alert alert-danger h2" role="alert">
-            Movie Reviews
-        </div>
+        <div class="alert alert-danger h2" role="alert">Movie Reviews</div>
     </div>
-    <table class="table table-striped table-condensed table-bordered trans my-2">
+    <table class="table table-striped table-condensed table-bordered rounded trans my-2">
         <tr class="text-light">
             <th>S.No</th>
             <th>Review</th>
@@ -87,26 +85,37 @@
             <td class="active">{{forloop.counter}}</td>
             <td class="active">{{review.review}}</td>
             {% if review.pred %}
-                <td class="active">&#x1F600;</td>
+            <td class="active">&#x1F600;</td>
             {% else %}
-                <td class="active">&#128530;</td>
+            <td class="active">&#128530;</td>
             {% endif %}
         </tr>
         {% endfor %}
     </table>
     {% endif %}
     {% if movie_posters %}
-    {% for movie,poster in movie_posters %}
-    <h1>Similar Movies</h1>
-    {{movie}}
-    <img width="200px" src={{poster}}>
-    <form action="{% url 'home' %}" method="POST">
-        {% csrf_token %}
-        <input hidden type="text" name="title" value={{movie}}>
-        <input type="submit" value="view">
-    </form>
-    <hr>
-    {% endfor %}
+    <div class="row text-center mt-5 mb-3">
+        <div class="alert alert-danger h2" role="alert">Recommended Movies</div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
+        {% for movie,poster in movie_posters %}
+        <div class="col">
+            <div class="card h-100 text-light text-center border">
+                <img src="{{poster}}" class="card-img-top" alt="movie-img">
+                <div class="card-body trans border">
+                    <h5 class="card-title">{{movie|capfirst}}</h5>
+                </div>
+                <div class="card-footer trans">
+                    <form action="{% url 'home' %}" method="POST">
+                        {% csrf_token %}
+                        <input hidden type="text" name="title" value={{movie}}>
+                        <input class="astext" type="submit" value="Detailed View">
+                    </form>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
     {% else %}
     <h2>Some thing went worng</h2>
     {% endif %}
