add movie record model and form

--- a/red_mind/core/templates/core/base.html
+++ b/red_mind/core/templates/core/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    <title>PRM : {% block title %}{% endblock title %}</title>
+    <title>Poject Red Mind : {% block title %}{% endblock title %}</title>
 </head>
 <body>
     
