--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -15,6 +15,9 @@
           <a class="nav-link {{cast_active}} {{cast_disabled}}">Cast <span class="sr-only">(current)</span></a>
         </li>
         {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="https://porjectredmindapi.herokuapp.com/">API <span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
   </div>
