--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" href="https://porjectredmindapi.herokuapp.com/">API <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {{about_active}} {{about_disabled}}" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
   </div>
