add google font

--- a/red_mind/core/templates/core/home.html
+++ b/red_mind/core/templates/core/home.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row pt-5">
         <div class="col-12">
-            <p class="text-responsive text-center text-white">Enter your favorite movie and get movies recommendation
+            <p class="text-responsive text-center text-white fstyle">Enter your favorite movie and get movies recommendation
             </p>
         </div>
     </div>
