--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand"><i class="fas fa-film"></i> Project Red Mind</a>
+    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-film"></i> Project Red Mind</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
