add admin panel

--- a/red_mind/core/templates/core/about.html
+++ b/red_mind/core/templates/core/about.html
@@ -17,13 +17,13 @@
                     <h3 class="card-title">Satyam Seth</h3>
                     <h4>Data Collection, Creating API, Backend, Deployment</h4>
                     <p class="card-text">
-                        <a href="mailto:satyam1998.1998@gmail.com">
+                        <a href="mailto:satyam1998.1998@gmail.com" target="_blank">
                             <i class="fas fa-envelope fa-2x mr-2 text-light"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/satyam-seth-39069b17a">
+                        <a href="https://www.linkedin.com/in/satyam-seth-39069b17a" target="_blank">
                             <i class="fab fa-linkedin fa-2x mx-2 text-light"></i>
                         </a>
-                        <a href="https://github.com/satyam-seth">
+                        <a href="https://github.com/satyam-seth" target="_blank">
                             <i class="fab fa-github fa-2x ml-2 text-light"></i>
                         </a>
                     </p>
@@ -37,13 +37,13 @@
                     <h3 class="card-title">Ankit Kumar Gupta</h3>
                     <h4>Creating Recommendation and Sentiment Snalysis ML models</h4>
                     <p class="card-text">
-                        <a href="mailto:ankitgupta6564@gmail.com">
+                        <a href="mailto:ankitgupta6564@gmail.com" target="_blank">
                             <i class="fas fa-envelope fa-2x mr-2 text-light"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/ankit-gupta-02376b179">
+                        <a href="https://www.linkedin.com/in/ankit-gupta-02376b179" target="_blank">
                             <i class="fab fa-linkedin fa-2x mx-2 text-light"></i>
                         </a>
-                        <a href="https://github.com/ankit700771">
+                        <a href="https://github.com/ankit700771" target="_blank">
                             <i class="fab fa-github fa-2x ml-2 text-light"></i>
                         </a>
                     </p>
@@ -57,13 +57,13 @@
                     <h3 class="card-title">Alisha Parveen</h3>
                     <h4>Frontend and Project Documentation</h4>
                     <p class="card-text">
-                        <a href="mailto:alishakhan1999@gmail.com">
+                        <a href="mailto:alishakhan1999@gmail.com" target="_blank">
                             <i class="fas fa-envelope fa-2x mr-2 text-light"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/alisha-parveen-">
+                        <a href="https://www.linkedin.com/in/alisha-parveen-" target="_blank">
                             <i class="fab fa-linkedin fa-2x mx-2 text-light"></i>
                         </a>
-                        <a href="https://github.com/shali-lalee">
+                        <a href="https://github.com/shali-lalee" target="_blank">
                             <i class="fab fa-github fa-2x ml-2 text-light"></i>
                         </a>
                     </p>
@@ -77,13 +77,13 @@
                     <h3 class="card-title">Harshit Dixit</h3>
                     <h4>Frontend</h4>
                     <p class="card-text">
-                        <a href="mailto:harshitdixit65@gmail.com">
+                        <a href="mailto:harshitdixit65@gmail.com" target="_blank">
                             <i class="fas fa-envelope fa-2x mr-2 text-light"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/harshit-dixit-38b27a149">
+                        <a href="https://www.linkedin.com/in/harshit-dixit-38b27a149" target="_blank">
                             <i class="fab fa-linkedin fa-2x mx-2 text-light"></i>
                         </a>
-                        <a href="https://github.com/harshitdixit69">
+                        <a href="https://github.com/harshitdixit69" target="_blank">
                             <i class="fab fa-github fa-2x ml-2 text-light"></i>
                         </a>
                     </p>
@@ -97,13 +97,13 @@
                     <h3 class="card-title">Abhishek Kumar Yadav</h3>
                     <h4>Project Testing</h4>
                     <p class="card-text">
-                        <a href="mailto:abhi991926@gmail.com">
+                        <a href="mailto:abhi991926@gmail.com" target="_blank">
                             <i class="fas fa-envelope fa-2x mr-2 text-light"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/abhishek-kumar-yadav-780262194">
+                        <a href="https://www.linkedin.com/in/abhishek-kumar-yadav-780262194" target="_blank">
                             <i class="fab fa-linkedin fa-2x mx-2 text-light"></i>
                         </a>
-                        <a href="https://github.com/Abhishek991926">
+                        <a href="https://github.com/Abhishek991926" target="_blank">
                             <i class="fab fa-github fa-2x ml-2 text-light"></i>
                         </a>
                     </p>
