--- a/red_mind/core/templates/core/navbar.html
+++ b/red_mind/core/templates/core/navbar.html
@@ -19,6 +19,9 @@
           <a class="nav-link" href="https://porjectredmindapi.herokuapp.com/">API <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/admin" target="_blank">Admin Panel <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link {{about_active}} {{about_disabled}}" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
         </li>
       </ul>
